[tool.poetry]
name = "mytonctrl-tools"
version = "0.0.1"
description = "MyTonCtrl forked and improved"
authors = ["Alexander Walther"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "3.8.12"
click = "8.1.3"
pydantic = "1.10.2"
crc16 = "0.1.1"
requests = "2.28.1"
psutil = "5.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
