[build-system]
requires = ["setuptools>=64"]
build-backend = "_build_backend"
backend-path = ["."]


[project]
name = "mytonctrl"
version = "0.1.0"
description = "MyTonCtrl"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "TON Core" }]

dependencies = [
    "requests==2.32.4",
    "psutil==6.1.0",
    "fastcrc==0.3.2",
    "pynacl==1.5.0",
    "importlib_resources==6.4.5; python_version < '3.9'",
]

[project.urls]
Homepage = "https://github.com/ton-blockchain/mytonctrl"

[tool.setuptools.packages.find]
include = [
    "mytoninstaller*",
    "mypyconsole*",
    "mytonctrl*",
    "mypylib*",
    "modules*",
    "mytoncore*",
]
exclude = [
    "tests",
    "tests.*",
]

[tool.setuptools.package-data]
"mytoninstaller.scripts" = ["*.sh"]
mytoncore = [
    "contracts/single-nominator-pool/*",
    "complaints/*",
]
mytonctrl = [
    "resources/*",
    "scripts/*",
]

[tool.pyright]
exclude = [
    "mytonctrl/scripts/**",
]
